fix alt attribute in <img>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +16,7 @@
 <body>
 <div class="card-container">
   <div class="img-ilustraror">
-    <img src="assets/images/illustration-article.svg">
+    <img src="assets/images/illustration-article.svg" alt="">
   </div>
 <div class="mid-container">
   <button class="btn" ><strong>Learning</strong></button>
@@ -29,7 +30,7 @@
 
   <div class="end-container">
     <div class="img-avatar">
-      <img src="assets/images/image-avatar.webp" >
+      <img src="assets/images/image-avatar.webp" alt="">
     </div>
     <div >
       <p class="last-p"><strong>Greg Hooper</strong></p>
